--- a/.github/workflows/issue-assigner.yml
+++ b/.github/workflows/issue-assigner.yml
@@ -17,15 +17,15 @@ jobs:
             const title = issue.title.toLowerCase();
             const body = (issue.body || '').toLowerCase();
 
-            // 팀원 및 전문가 정의 (실제 GitHub 사용자명으로 변경 필요)
-            const teamMembers = {
-              backend: ['backend-dev1', 'backend-dev2'],
-              frontend: ['frontend-dev1', 'frontend-dev2'],
-              fullstack: ['fullstack-dev1', 'fullstack-dev2'],
-              docs: ['docs-maintainer'],
-              devops: ['devops-expert'],
-              maintenance: ['maintainer1', 'maintainer2']
-            };
+                      // 팀원 및 전문가 정의
+          const teamMembers = {
+            backend: ['yoonucho'],
+            frontend: ['yoonucho'],
+            fullstack: ['yoonucho'],
+            docs: ['yoonucho'],
+            devops: ['yoonucho'],
+            maintenance: ['yoonucho']
+          };
 
             // 이슈 타입 및 컴포넌트 감지
             let assigneeCategory = 'maintenance'; // 기본값
