--- a/.github/workflows/pr-assigner.yml
+++ b/.github/workflows/pr-assigner.yml
@@ -4,6 +4,11 @@ on:
   pull_request:
     types: [opened, ready_for_review]
 
+permissions:
+  contents: read
+  issues: write
+  pull-requests: write
+
 jobs:
   assign-reviewers:
     runs-on: ubuntu-latest
@@ -14,18 +19,18 @@ jobs:
         uses: actions/github-script@v7
         with:
           script: |
-                      // 프로젝트 팀원 목록
-          const teamMembers = [
-            'yoonucho'
-          ];
-          
-          // 코드 영역별 전문가 매핑
-          const codeOwners = {
-            'backend/': ['yoonucho'],
-            'frontend/': ['yoonucho'],
-            'docs/': ['yoonucho'],
-            '.github/': ['yoonucho']
-          };
+            // 프로젝트 팀원 목록
+            const teamMembers = [
+              'yoonucho'
+            ];
+
+            // 코드 영역별 전문가 매핑
+            const codeOwners = {
+              'backend/': ['yoonucho'],
+              'frontend/': ['yoonucho'],
+              'docs/': ['yoonucho'],
+              '.github/': ['yoonucho']
+            };
 
             const pr = context.payload.pull_request;
             const author = pr.user.login;
